<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DescDetailFragment">

            <TextView
                android:id="@+id/record_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/txt_records_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/misha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/record_details" />


            <TextView
                android:id="@+id/recordtexttitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/txt_records_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userImage" />


            <TextView
                android:id="@+id/record_title_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/recordtexttitle"
                app:layout_constraintStart_toEndOf="@+id/recordtexttitle"
                app:layout_constraintTop_toTopOf="@+id/recordtexttitle" />


            <TextView
                android:id="@+id/recordtextDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/txt_records_desc_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recordtexttitle" />


            <TextView
                android:id="@+id/record_Desc_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/recordtextDesc"
                app:layout_constraintStart_toEndOf="@+id/recordtextDesc"
                app:layout_constraintTop_toTopOf="@+id/recordtextDesc" />


            <TextView
                android:id="@+id/recordtextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/txt_records_date"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recordtextDesc" />


            <TextView
                android:id="@+id/record_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/recordtextDate"
                app:layout_constraintStart_toEndOf="@+id/recordtextDate"
                app:layout_constraintTop_toTopOf="@+id/recordtextDate" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>